--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,8 +1,8 @@
-<div class="row">
-  <div class="col-xs-12">
-    <form>
-      <div class="row">
-        <div class="col-sm-5 form-group">
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <form>
+        <div class="form-group">
           <label for="name">Name</label>
           <input
             type="text"
@@ -10,7 +10,7 @@
             class="form-control"
             #nameInput>
         </div>
-        <div class="col-sm-2 form-group">
+        <div class="form-group">
           <label for="amount">Amount</label>
           <input
             type="number"
@@ -18,14 +18,10 @@
             class="form-control"
             #amountInput>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
-        </div>
-      </div>
-    </form>
+        <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>
+        <button class="btn btn-danger" type="button">Delete</button>
+        <button class="btn btn-primary" type="button">Clear</button>
+      </form>
+    </div>
   </div>
 </div>
