--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,14 +1,15 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <form>
+      <form (ngSubmit)="onAddItem(f)" #f="ngForm">
         <div class="form-group">
           <label for="name">Name</label>
           <input
             type="text"
             id="name"
             class="form-control"
-            #nameInput>
+            name="name"
+            ngModel>
         </div>
         <div class="form-group">
           <label for="amount">Amount</label>
@@ -16,9 +17,10 @@
             type="number"
             id="amount"
             class="form-control"
-            #amountInput>
+            name="amout"
+            ngModel>
         </div>
-        <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>
+        <button class="btn btn-success" type="submit" >Add</button>
         <button class="btn btn-danger" type="button">Delete</button>
         <button class="btn btn-primary" type="button">Clear</button>
       </form>
