--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -17,7 +17,7 @@
             type="number"
             id="amount"
             class="form-control"
-            name="amout"
+            name="amount"
             ngModel>
         </div>
         <button class="btn btn-success" type="submit" >Add</button>
