--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -9,7 +9,8 @@
             id="name"
             class="form-control"
             name="name"
-            ngModel>
+            ngModel
+          required>
         </div>
         <div class="form-group">
           <label for="amount">Amount</label>
@@ -18,9 +19,13 @@
             id="amount"
             class="form-control"
             name="amount"
-            ngModel>
+            ngModel
+          required>
         </div>
-        <button class="btn btn-success" type="submit" >Add</button>
+        <button
+          class="btn btn-success"
+          type="submit"
+          [disabled]="!f.valid">Add</button>
         <button class="btn btn-danger" type="button">Delete</button>
         <button class="btn btn-primary" type="button">Clear</button>
       </form>
