--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -10,7 +10,8 @@
             class="form-control"
             name="name"
             ngModel
-          required>
+          required
+          >
         </div>
         <div class="form-group">
           <label for="amount">Amount</label>
@@ -20,7 +21,8 @@
             class="form-control"
             name="amount"
             ngModel
-          required>
+          required
+          pattern="^[1-9]+[0-9]*$">
         </div>
         <button
           class="btn btn-success"
