--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <form (ngSubmit)="onAddItem(f)" #f="ngForm">
+      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div class="form-group">
           <label for="name">Name</label>
           <input
@@ -27,9 +27,9 @@
         <button
           class="btn btn-success"
           type="submit"
-          [disabled]="!f.valid">Add</button>
+          [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add'}}</button>
         <button class="btn btn-danger" type="button">Delete</button>
-        <button class="btn btn-primary" type="button">Clear</button>
+        <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
       </form>
     </div>
   </div>
