--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,27 @@
-<p>recipe-edit works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <form>
+        <button type="submit" class="btn btn-success">Save</button>
+        <button type="submit" class="btn btn-danger">Cancel</button>
+
+
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text"
+                   class="form-control"
+                   id="name"
+            >
+          </div>
+        <div class="form-group">
+          <label for="imagePath">Image Url</label>
+          <input type="text"
+                 class="form-control"
+                 id="imagePath"
+          >
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
