--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -20,7 +20,9 @@
                  id="imagePath"
           >
         </div>
-
+        <div class="form-group">
+          <img src="" alt="" class="img-responsive">
+        </div>
       </form>
     </div>
   </div>
