--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,28 +1,59 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <form>
+      <form [formGroup]="'recipeForm'" (ngSubmit)="onSubmit()">
         <button type="submit" class="btn btn-success">Save</button>
         <button type="submit" class="btn btn-danger">Cancel</button>
 
 
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text"
-                   class="form-control"
-                   id="name"
-            >
-          </div>
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text"
+                 class="form-control"
+                 id="name"
+                 formControlName="name"
+          >
+        </div>
         <div class="form-group">
           <label for="imagePath">Image Url</label>
           <input type="text"
                  class="form-control"
                  id="imagePath"
+                 formControlName="imagePath"
           >
         </div>
         <div class="form-group">
           <img src="" alt="" class="img-responsive">
         </div>
+        <div class="form-group">
+          <label for="description">Description</label>
+          <textarea type="text"
+                    class="form-control"
+                    id="description"
+                    rows="6"
+                    formControlName="description"
+          > </textarea>
+        </div>
+        <div class="form-group">
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <input type="text"
+                       class="form-control"
+                >
+              </div>
+              <div class="col">
+                <input type="text"
+                       class="form-control"
+                >
+              </div>
+              <div class="col">
+                <button type="submit" class="btn btn-outline-warning">X</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </form>
     </div>
   </div>
