--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <form [formGroup]="'recipeForm'" (ngSubmit)="onSubmit()">
+      <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
         <button type="submit" class="btn btn-success">Save</button>
         <button type="submit" class="btn btn-danger">Cancel</button>
 
