--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -35,16 +35,20 @@
           > </textarea>
         </div>
         <div class="form-group">
-          <div class="container">
-            <div class="row">
+          <div class="container" formArrayName="ingredients">
+            <div class="row"
+                 *ngFor="let ingredientCtrl of getControls(); let i = index"
+                 [formGroupName]="i">
               <div class="col">
                 <input type="text"
                        class="form-control"
+                       formControlName="name"
                 >
               </div>
               <div class="col">
                 <input type="text"
                        class="form-control"
+                       formControlName="amount"
                 >
               </div>
               <div class="col">
