--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -38,7 +38,8 @@
           <div class="container" formArrayName="ingredients">
             <div class="row"
                  *ngFor="let ingredientCtrl of getControls(); let i = index"
-                 [formGroupName]="i">
+                 [formGroupName]="i"
+                 style="margin-top: 10px">
               <div class="col">
                 <input type="text"
                        class="form-control"
@@ -55,6 +56,17 @@
                 <button type="submit" class="btn btn-outline-warning">X</button>
               </div>
             </div>
+            <hr>
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                  <button class="btn btn-info"
+                          type="button"
+                          (click)="onAddIngredient()">Add Ingredient</button>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
 
