--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -2,7 +2,10 @@
   <div class="row">
     <div class="col">
       <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
-        <button type="submit" class="btn btn-success">Save</button>
+        <button
+          type="submit"
+          class="btn btn-success"
+        [disabled]="!recipeForm.valid">Save</button>
         <button type="submit" class="btn btn-danger">Cancel</button>
 
 
