--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -6,7 +6,10 @@
           type="submit"
           class="btn btn-success"
         [disabled]="!recipeForm.valid">Save</button>
-        <button type="submit" class="btn btn-danger">Cancel</button>
+        <button
+          type="submit"
+          class="btn btn-danger"
+        (click)="onCancel()">Cancel</button>
 
 
         <div class="form-group">
